force-app/main/default/objects/To_Do__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to display whether the To-Do is completed or not</description>
    <inlineHelpText>Is your To-Do Completed?</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>