force-app/main/default/objects/To_Do__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>The Date and Time on which the To-Do was completed.</description>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>